- Added facility to pick deadlock criteria and assertions in application classes only.